# VaultRS

./: .gitignore  Cargo.toml  README.md
migrations/: 001_users.sql  002_vault.sql
src/: auth.rs  crypto.rs  db.rs  errors.rs  main.rs  models.rs  vault.rs
static/: app.css
templates/: base.html  login.html  register.html  vault.html
