[package]
name = "vaultrs"
version = "0.1.0"
edition = "2021"

[dependencies]
# web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }

# auth + sessions
axum-login = "0.15"
tower-sessions = "0.13"
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"] }

# database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"

# serialization + utils
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde"] }

# templating
minijinja = { version = "2", features = ["loader"] }
minijinja-autoreload = "2"

# error handling
thiserror = "1"
anyhow = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# env config
dotenvy = "0.15"


hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }






